<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CalculationsActivity">
    
    <EditText
        android:id ="@+id/firstvalue"
        android:hint="Enter value of a "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id ="@+id/secondvalue"
        android:hint="Enter value of b "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id ="@+id/buttoncalculate"
       android:text="Submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:id="@+id/displaysum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

</LinearLayout>